<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="Person Details" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/appBarLayout"
            app:layout_constraintStart_toEndOf="@+id/appBarLayout"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <TextView
                android:id="@+id/tv_first_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/first_name"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_first_name_title"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Gabriel" />

            <TextView
                android:id="@+id/tv_last_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/last_name"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_first_name" />

            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_last_name_title"
                app:layout_constraintTop_toBottomOf="@id/tv_first_name"
                tools:text="Diaz" />

            <TextView
                android:id="@+id/tv_age_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/age"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_last_name_title" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/tv_age_title"
                app:layout_constraintTop_toBottomOf="@id/tv_last_name"
                tools:text="18" />

            <TextView
                android:id="@+id/tv_gender_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/gender"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_age_title" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/tv_gender_title"
                app:layout_constraintTop_toBottomOf="@id/tv_age"
                tools:text="M" />

            <TextView
                android:id="@+id/tv_country_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/country"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_gender_title" />

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/tv_country_title"
                app:layout_constraintTop_toBottomOf="@id/tv_gender"
                tools:text="Uruguay" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>